# cppHackathon_2023

./: CMakeLists.txt  README.md
inc/: UtilityFunctions.h  XMLProcessing.h  YAMLProcessing.h
src/: CMakeLists.txt  Main.cpp  UtilityFunctions.cpp  XMLProcessing.cpp  YAMLProcessing.cpp  config.txt  globals.cpp  parseARXML.cpp
tests/: CMakeLists.txt  test_main.cpp
